@@ -175,7 +175,7 @@ plot.bootEGA <- function(x, plot.type = c("GGally","qgraph"),
     ega.plot <- suppressMessages(
       do.call(GGally::ggnet2, plot.args) + 
         ggplot2::theme(legend.title = ggplot2::element_blank()) +
-        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, x$typicalGraph$wc),
+        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, na.omit(x$typicalGraph$wc)),
                                     breaks = sort(x$typicalGraph$wc)) +
         ggplot2::guides(
           color = ggplot2::guide_legend(override.aes = list(
@@ -294,7 +294,7 @@ plot.dynEGA.Groups <- function(x, ncol, nrow, title = "", plot.type = c("GGally"
       plots.net[[i]] <- suppressMessages(
         do.call(GGally::ggnet2, plot.args) + 
           ggplot2::theme(legend.title = ggplot2::element_blank()) +
-          ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, x$dynEGA[[i]]$wc),
+          ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, na.omit(x$dynEGA[[i]]$wc)),
                                       breaks = sort(x$dynEGA[[i]]$wc)) +
           ggplot2::guides(
             color = ggplot2::guide_legend(override.aes = list(
@@ -401,7 +401,7 @@ plot.dynEGA.Individuals <- function(x, title = "",  id = NULL, plot.type = c("GG
     ega.plot <- suppressMessages(
       do.call(GGally::ggnet2, plot.args) + 
         ggplot2::theme(legend.title = ggplot2::element_blank()) +
-        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, x$dynEGA[[id]]$wc),
+        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, na.omit(x$dynEGA[[id]]$wc)),
                                     breaks = sort(x$dynEGA[[id]]$wc)) +
         ggplot2::guides(
           color = ggplot2::guide_legend(override.aes = list(
@@ -519,7 +519,7 @@ plot.dynEGA <- function(x, title = "", plot.type = c("GGally","qgraph"),
     ega.plot <- suppressMessages(
       do.call(GGally::ggnet2, plot.args) + 
         ggplot2::theme(legend.title = ggplot2::element_blank()) +
-        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, x$dynEGA$wc),
+        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, na.omit(x$dynEGA$wc)),
                                     breaks = sort(x$dynEGA$wc)) +
         ggplot2::guides(
           color = ggplot2::guide_legend(override.aes = list(
@@ -638,7 +638,7 @@ plot.EGA <- function(x,  title = "", plot.type = c("GGally","qgraph"),
     ega.plot <- suppressMessages(
       do.call(GGally::ggnet2, plot.args) + 
         ggplot2::theme(legend.title = ggplot2::element_blank()) +
-        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, x$wc),
+        ggplot2::scale_color_manual(values = color_palette_EGA(color.palette, na.omit(x$wc)),
                                     breaks = sort(x$wc)) +
         ggplot2::guides(
           color = ggplot2::guide_legend(override.aes = list(
